reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,コマンドレット
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220192"
---
# <span data-ttu-id="b6754-103">Microsoft.PowerShell.Core モジュール</span><span class="sxs-lookup"><span data-stu-id="b6754-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="b6754-104">説明</span><span class="sxs-lookup"><span data-stu-id="b6754-104">Description</span></span>

<span data-ttu-id="b6754-105">ここでは、PowerShell の powershell を使用してインストールされるコマンドレットのヘルプトピックについて説明します。</span><span class="sxs-lookup"><span data-stu-id="b6754-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="b6754-106">コアモジュールには、PowerShell の基本的な機能を管理するコマンドレットとプロバイダーが含まれています。</span><span class="sxs-lookup"><span data-stu-id="b6754-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="b6754-107">Microsoft. PowerShell コマンドレット</span><span class="sxs-lookup"><span data-stu-id="b6754-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="b6754-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="b6754-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="b6754-109">セッションの履歴にエントリを追加します。</span><span class="sxs-lookup"><span data-stu-id="b6754-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="b6754-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6754-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="b6754-111">現在のセッションに 1 つまたは複数の Windows PowerShell スナップインを追加します。</span><span class="sxs-lookup"><span data-stu-id="b6754-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="b6754-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="b6754-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="b6754-113">PowerShell セッションのコマンド履歴からエントリを削除します。</span><span class="sxs-lookup"><span data-stu-id="b6754-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="b6754-114">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="b6754-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="b6754-115">ホスト プログラムの表示を消去します。</span><span class="sxs-lookup"><span data-stu-id="b6754-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="b6754-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="b6754-117">切断されたセッションに再接続します。</span><span class="sxs-lookup"><span data-stu-id="b6754-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="b6754-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="b6754-119">実行中のバックグラウンド、リモート、または Windows PowerShell ワークフロージョブをデバッグします。</span><span class="sxs-lookup"><span data-stu-id="b6754-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="b6754-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="b6754-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="b6754-121">PowerShell エンドポイントがリモート接続を受信できないようにします。</span><span class="sxs-lookup"><span data-stu-id="b6754-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="b6754-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="b6754-123">ローカル コンピューター上のセッション構成を無効にします。</span><span class="sxs-lookup"><span data-stu-id="b6754-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="b6754-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="b6754-125">セッションから切断します。</span><span class="sxs-lookup"><span data-stu-id="b6754-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="b6754-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="b6754-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="b6754-127">リモート コマンドを受信するようにコンピューターを構成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="b6754-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="b6754-129">ローカル コンピューター上のセッション構成を有効にします。</span><span class="sxs-lookup"><span data-stu-id="b6754-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="b6754-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="b6754-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="b6754-131">ローカルプロセスを使用して、対話型セッションに接続して入力します。</span><span class="sxs-lookup"><span data-stu-id="b6754-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="b6754-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="b6754-133">リモート コンピューターとの対話型セッションを開始します。</span><span class="sxs-lookup"><span data-stu-id="b6754-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="b6754-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="b6754-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="b6754-135">ローカルプロセスで対話型セッションを終了します。</span><span class="sxs-lookup"><span data-stu-id="b6754-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="b6754-136">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="b6754-137">リモート コンピューターとの対話型セッションを終了します。</span><span class="sxs-lookup"><span data-stu-id="b6754-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="b6754-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="b6754-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="b6754-139">現在のセッションのスナップインの名前をコンソール ファイルにエクスポートします。</span><span class="sxs-lookup"><span data-stu-id="b6754-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="b6754-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="b6754-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="b6754-141">エクスポートするモジュール メンバーを指定します。</span><span class="sxs-lookup"><span data-stu-id="b6754-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="b6754-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="b6754-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="b6754-143">入力オブジェクトのコレクション内の各項目に対して操作を実行します。</span><span class="sxs-lookup"><span data-stu-id="b6754-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="b6754-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="b6754-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="b6754-145">すべてのコマンドを取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-145">Gets all commands.</span></span>

### [<span data-ttu-id="b6754-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="b6754-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="b6754-147">PowerShell コマンドと概念に関する情報を表示します。</span><span class="sxs-lookup"><span data-stu-id="b6754-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="b6754-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="b6754-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="b6754-149">現在のセッション中に入力したコマンドの一覧を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="b6754-150">Get-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="b6754-151">現在のセッションで実行されている PowerShell バックグラウンドジョブを取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="b6754-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="b6754-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="b6754-153">現在のセッションにインポート済みの、またはインポート可能なモジュールを取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="b6754-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="b6754-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="b6754-155">PowerShell ホストに関するプロセス情報を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="b6754-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="b6754-157">ローカルコンピューターとリモートコンピューター上の PowerShell セッションを取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="b6754-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="b6754-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="b6754-159">制約付きセッション構成で特定のユーザーの機能を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="b6754-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="b6754-161">コンピューターに登録されたセッション構成を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="b6754-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6754-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="b6754-163">コンピューター上の Windows PowerShell スナップインを取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="b6754-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="b6754-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="b6754-165">承認された PowerShell 動詞を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="b6754-166">Import-Module</span><span class="sxs-lookup"><span data-stu-id="b6754-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="b6754-167">現在のセッションにモジュールを追加します。</span><span class="sxs-lookup"><span data-stu-id="b6754-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="b6754-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="b6754-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="b6754-169">ローカル コンピューターおよびリモート コンピューター上でコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="b6754-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="b6754-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="b6754-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="b6754-171">セッションの履歴からコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="b6754-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="b6754-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="b6754-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="b6754-173">メモリ内にのみ存在する新しい動的モジュールを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="b6754-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="b6754-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="b6754-175">新しいモジュール マニフェストを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="b6754-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="b6754-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="b6754-177">セッション構成を通じて公開される一連の機能を定義するファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="b6754-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="b6754-179">ローカル コンピューターまたはリモート コンピューターへの永続的な接続を作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="b6754-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="b6754-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="b6754-181">セッション構成を定義するファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="b6754-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="b6754-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="b6754-183">PSSession の詳細設定オプションが格納されたオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="b6754-184">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="b6754-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="b6754-185">セッション構成の詳細設定オプションが格納されたオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="b6754-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="b6754-186">Out-Default</span><span class="sxs-lookup"><span data-stu-id="b6754-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="b6754-187">既定のフォーマッタおよび既定の出力コマンドレットに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="b6754-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="b6754-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="b6754-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="b6754-189">コマンド ラインに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="b6754-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="b6754-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="b6754-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="b6754-191">パイプラインで送信するか、表示するのではなく、出力を非表示にします。</span><span class="sxs-lookup"><span data-stu-id="b6754-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="b6754-192">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="b6754-193">現在のセッションの PowerShell バックグラウンドジョブの結果を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="b6754-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="b6754-195">切断されたセッションのコマンドの結果を取得します。</span><span class="sxs-lookup"><span data-stu-id="b6754-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="b6754-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="b6754-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="b6754-197">カスタム引数 completer を登録します。</span><span class="sxs-lookup"><span data-stu-id="b6754-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="b6754-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="b6754-199">新しいセッション構成を作成して登録します。</span><span class="sxs-lookup"><span data-stu-id="b6754-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="b6754-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="b6754-201">PowerShell バックグラウンドジョブを削除します。</span><span class="sxs-lookup"><span data-stu-id="b6754-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="b6754-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="b6754-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="b6754-203">現在のセッションからモジュールを削除します。</span><span class="sxs-lookup"><span data-stu-id="b6754-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="b6754-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6754-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="b6754-205">1つ以上の PowerShell セッション (pssession) を閉じます。</span><span class="sxs-lookup"><span data-stu-id="b6754-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="b6754-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6754-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="b6754-207">現在のセッションから Windows PowerShell スナップインを削除します。</span><span class="sxs-lookup"><span data-stu-id="b6754-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="b6754-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="b6754-209">中断されたジョブを再開します。</span><span class="sxs-lookup"><span data-stu-id="b6754-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="b6754-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="b6754-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="b6754-211">最新のヘルプ ファイルをダウンロードしてファイル システム ディレクトリに保存します。</span><span class="sxs-lookup"><span data-stu-id="b6754-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="b6754-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="b6754-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="b6754-213">スクリプトのデバッグ機能のオン/オフの切り替え、トレース レベルの設定、厳格モードの切り替えを行います。</span><span class="sxs-lookup"><span data-stu-id="b6754-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="b6754-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="b6754-215">登録済みのセッション構成のプロパティを変更します。</span><span class="sxs-lookup"><span data-stu-id="b6754-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="b6754-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="b6754-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="b6754-217">式、スクリプト、およびスクリプト ブロックでのコーディング規則を確立し、適用します。</span><span class="sxs-lookup"><span data-stu-id="b6754-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="b6754-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="b6754-219">PowerShell バックグラウンドジョブを開始します。</span><span class="sxs-lookup"><span data-stu-id="b6754-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="b6754-220">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="b6754-221">PowerShell バックグラウンドジョブを停止します。</span><span class="sxs-lookup"><span data-stu-id="b6754-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="b6754-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="b6754-223">ワークフロー ジョブを一時的に停止します。</span><span class="sxs-lookup"><span data-stu-id="b6754-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="b6754-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="b6754-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="b6754-225">モジュールのマニフェスト ファイルにモジュールの内容が正確に記述されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="b6754-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="b6754-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="b6754-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="b6754-227">セッション構成ファイル内のキーと値を確認します。</span><span class="sxs-lookup"><span data-stu-id="b6754-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="b6754-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6754-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="b6754-229">登録されたセッション構成をコンピューターから削除します。</span><span class="sxs-lookup"><span data-stu-id="b6754-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="b6754-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="b6754-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="b6754-231">最新のヘルプ ファイルをダウンロードしてコンピューターにインストールします。</span><span class="sxs-lookup"><span data-stu-id="b6754-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="b6754-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="b6754-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="b6754-233">セッションで実行されている PowerShell バックグラウンドジョブの1つまたはすべてが完了するまで、コマンドプロンプトを表示しません。</span><span class="sxs-lookup"><span data-stu-id="b6754-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="b6754-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="b6754-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="b6754-235">プロパティの値に基づいて、コレクションからオブジェクトを選択します。</span><span class="sxs-lookup"><span data-stu-id="b6754-235">Selects objects from a collection based on their property values.</span></span>
