reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,コマンドレット
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220419"
---
# <span data-ttu-id="79c3d-103">Microsoft.PowerShell.Core モジュール</span><span class="sxs-lookup"><span data-stu-id="79c3d-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="79c3d-104">説明</span><span class="sxs-lookup"><span data-stu-id="79c3d-104">Description</span></span>

<span data-ttu-id="79c3d-105">ここでは、PowerShell の powershell を使用してインストールされるコマンドレットのヘルプトピックについて説明します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="79c3d-106">コアモジュールには、PowerShell の基本的な機能を管理するコマンドレットとプロバイダーが含まれています。</span><span class="sxs-lookup"><span data-stu-id="79c3d-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="79c3d-107">Microsoft. PowerShell コマンドレット</span><span class="sxs-lookup"><span data-stu-id="79c3d-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="79c3d-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="79c3d-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="79c3d-109">セッションの履歴にエントリを追加します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="79c3d-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="79c3d-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="79c3d-111">PowerShell セッションのコマンド履歴からエントリを削除します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="79c3d-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="79c3d-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="79c3d-113">ホスト プログラムの表示を消去します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="79c3d-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="79c3d-115">切断されたセッションに再接続します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="79c3d-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="79c3d-117">実行中のバックグラウンド、リモート、または PowerShell ワークフロージョブをデバッグします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="79c3d-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="79c3d-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="79c3d-119">PowerShell の新しいインスタンスの起動時に実験的な機能を無効にします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="79c3d-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="79c3d-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="79c3d-121">PowerShell エンドポイントがリモート接続を受信できないようにします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="79c3d-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-123">ローカル コンピューター上のセッション構成を無効にします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="79c3d-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="79c3d-125">セッションから切断します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="79c3d-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="79c3d-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="79c3d-127">PowerShell の新しいインスタンスの起動時に実験的な機能を有効にします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="79c3d-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="79c3d-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="79c3d-129">リモート コマンドを受信するようにコンピューターを構成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="79c3d-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-131">ローカル コンピューター上のセッション構成を有効にします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="79c3d-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="79c3d-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="79c3d-133">ローカルプロセスを使用して、対話型セッションに接続して入力します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="79c3d-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="79c3d-135">リモート コンピューターとの対話型セッションを開始します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="79c3d-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="79c3d-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="79c3d-137">ローカルプロセスで対話型セッションを終了します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="79c3d-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="79c3d-139">リモート コンピューターとの対話型セッションを終了します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="79c3d-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="79c3d-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="79c3d-141">エクスポートするモジュール メンバーを指定します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="79c3d-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="79c3d-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="79c3d-143">入力オブジェクトのコレクション内の各項目に対して操作を実行します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="79c3d-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="79c3d-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="79c3d-145">すべてのコマンドを取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-145">Gets all commands.</span></span>

### [<span data-ttu-id="79c3d-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="79c3d-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="79c3d-147">試験的な機能を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-147">Gets experimental features.</span></span>

### [<span data-ttu-id="79c3d-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="79c3d-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="79c3d-149">PowerShell コマンドと概念に関する情報を表示します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="79c3d-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="79c3d-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="79c3d-151">現在のセッション中に入力したコマンドの一覧を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="79c3d-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="79c3d-153">現在のセッションで実行されている PowerShell バックグラウンドジョブを取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="79c3d-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="79c3d-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="79c3d-155">現在のセッションにインポート済みの、またはインポート可能なモジュールを取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="79c3d-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="79c3d-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="79c3d-157">PowerShell ホストに関するプロセス情報を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="79c3d-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="79c3d-159">ローカルコンピューターとリモートコンピューター上の PowerShell セッションを取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="79c3d-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="79c3d-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="79c3d-161">制約付きセッション構成で特定のユーザーの機能を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="79c3d-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-163">コンピューターに登録されたセッション構成を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="79c3d-164">Import-Module</span><span class="sxs-lookup"><span data-stu-id="79c3d-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="79c3d-165">現在のセッションにモジュールを追加します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="79c3d-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="79c3d-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="79c3d-167">ローカル コンピューターおよびリモート コンピューター上でコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="79c3d-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="79c3d-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="79c3d-169">セッションの履歴からコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="79c3d-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="79c3d-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="79c3d-171">メモリ内にのみ存在する新しい動的モジュールを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="79c3d-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="79c3d-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="79c3d-173">新しいモジュール マニフェストを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="79c3d-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="79c3d-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="79c3d-175">セッション構成を通じて公開される一連の機能を定義するファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="79c3d-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="79c3d-177">ローカル コンピューターまたはリモート コンピューターへの永続的な接続を作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="79c3d-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="79c3d-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="79c3d-179">セッション構成を定義するファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="79c3d-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="79c3d-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="79c3d-181">PSSession の詳細設定オプションが格納されたオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="79c3d-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="79c3d-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="79c3d-183">セッション構成の詳細設定オプションが格納されたオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="79c3d-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="79c3d-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="79c3d-185">既定のフォーマッタおよび既定の出力コマンドレットに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="79c3d-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="79c3d-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="79c3d-187">コマンド ラインに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="79c3d-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="79c3d-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="79c3d-189">パイプラインで送信するか、表示するのではなく、出力を非表示にします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="79c3d-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="79c3d-191">現在のセッションの PowerShell バックグラウンドジョブの結果を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="79c3d-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="79c3d-193">切断されたセッションのコマンドの結果を取得します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="79c3d-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="79c3d-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="79c3d-195">カスタム引数 completer を登録します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="79c3d-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-197">新しいセッション構成を作成して登録します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="79c3d-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="79c3d-199">PowerShell バックグラウンドジョブを削除します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="79c3d-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="79c3d-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="79c3d-201">現在のセッションからモジュールを削除します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="79c3d-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="79c3d-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="79c3d-203">1つ以上の PowerShell セッション (pssession) を閉じます。</span><span class="sxs-lookup"><span data-stu-id="79c3d-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="79c3d-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="79c3d-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="79c3d-205">最新のヘルプ ファイルをダウンロードしてファイル システム ディレクトリに保存します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="79c3d-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="79c3d-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="79c3d-207">スクリプトのデバッグ機能のオン/オフの切り替え、トレース レベルの設定、厳格モードの切り替えを行います。</span><span class="sxs-lookup"><span data-stu-id="79c3d-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="79c3d-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-209">登録済みのセッション構成のプロパティを変更します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="79c3d-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="79c3d-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="79c3d-211">式、スクリプト、およびスクリプト ブロックでのコーディング規則を確立し、適用します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="79c3d-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="79c3d-213">PowerShell バックグラウンドジョブを開始します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="79c3d-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="79c3d-215">PowerShell バックグラウンドジョブを停止します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="79c3d-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="79c3d-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="79c3d-217">モジュールのマニフェスト ファイルにモジュールの内容が正確に記述されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="79c3d-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="79c3d-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="79c3d-219">セッション構成ファイル内のキーと値を確認します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="79c3d-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="79c3d-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="79c3d-221">登録されたセッション構成をコンピューターから削除します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="79c3d-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="79c3d-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="79c3d-223">最新のヘルプ ファイルをダウンロードしてコンピューターにインストールします。</span><span class="sxs-lookup"><span data-stu-id="79c3d-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="79c3d-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="79c3d-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="79c3d-225">セッションで実行されている PowerShell バックグラウンドジョブの1つまたはすべてが完了するまで、コマンドプロンプトを表示しません。</span><span class="sxs-lookup"><span data-stu-id="79c3d-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="79c3d-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="79c3d-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="79c3d-227">プロパティの値に基づいて、コレクションからオブジェクトを選択します。</span><span class="sxs-lookup"><span data-stu-id="79c3d-227">Selects objects from a collection based on their property values.</span></span>
